--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,29 @@
+01-FEB-2018: 8.0.5
+
+- Fixes possible NPE for cache invalidation
+- Fixes in-place change of graph model
+- Uses mxGraph 3.9.2 beta 2
+
+31-JAN-2018: 8.0.4
+
+- Reverts to using headless mxgraph
+- Fixes swap icon for shapes with fill color
+- Adds gradient and background in UML frame
+- Adds edge labels in text, CSV import
+
+30-JAN-2018: 8.0.3
+
+- Reverts to using previously GAE blacklisted classes
+- Uses mxGraph 3.9.2 beta 1
+
+23-JAN-2018: 8.0.2
+
+- Fixes constrained size change in arrange panel
+- Removes Dropbox and GitHub from splash screen
+- Handles empty string for image style
+- Adds workaround for dialog clipping
+- Uses mxGraph 3.9.1 beta 1
+
 19-JAN-2018: 8.0.1
 
 - Fixes ChangePageSetup
